街面信息，招商雷达更新

--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -584,6 +584,22 @@ button.arrowbtn.btnright{
 .wrj-left button.arrowbtn{ background-color:  rgba(0,0,0,.3); }
 .divbox-sxt2 button.arrowbtn{ background-image: url(../Content/images/sxt-video-btnicon-blue.png); }
 
+.sqzz-wrj-div {
+    width:100%;
+    height:2.7rem;
+    display:flex;
+    justify-content:space-between;
+}
+.sqzz-wrj-div .sqzz-wrj-div-video {
+    position:relative;
+    width:49%;
+    padding:.1rem;
+    background:rgba(53,93,242,.3);
+    box-sizing:border-box;
+    overflow:hidden;
+}
+
+
 /*左侧第二列---社区统计*/
 .divcont-sqtj{
 	height: 3.5rem;
@@ -671,6 +687,19 @@ button.arrowbtn.btnright{
 }
 .sqrk-li>.item-r>.item-r-name{ font-size: .22rem;}
 .sqrk-li>.item-r>.item-r-data{ font-size: .46rem; line-height: 1em;}
+
+#sqzz-wrj-ul .sqrk-li {
+    height:.8rem;
+    display:flex;
+    font-size:.3rem;
+    align-items:center;
+    justify-content:space-between;
+}
+#sqzz-wrj-ul .sqrk-li>img{ width:.8rem; margin-right:.2rem;}
+#sqzz-wrj-ul .sqrk-li > .item-r-data {
+    flex-grow:2;
+    text-align:right;
+}
 
 /*左侧第二列---无人机*/
 .wrj-l2-li{
@@ -854,10 +883,10 @@ button.arrowbtn.btnright{
 }
 #zsld-chart{
     position: relative;
-    left:1.4rem;
-    top:0.55rem;
-    width: 2.8rem;
-    height: 2.8rem;
+    left:1.35rem;
+    top:0.8rem;
+    width: 3.4rem;
+    height: 3.4rem;
 }
 #fkld-chart{
     position: relative;
@@ -2736,8 +2765,8 @@ dd.pjc-statistic-star >form{
 }
 
 .cy-tcfw-div{
-	padding: .1rem 0 ;
-	height: .9rem;
+	padding: .2rem 0 ;
+	height: 1.2rem;
 	border-radius: .05rem;
 	background-color: rgba(6,88,152,.5);
 	box-sizing: border-box;
@@ -2760,7 +2789,7 @@ dd.pjc-statistic-star >form{
 }
 .zsld-chartdiv{
 	background:url(../Content/images/yibiaopan-bg.png) 20% center no-repeat;
-	background-size:3rem;
+	background-size:3.8rem;
 }
 /*.cy-qy-divcont*/
 .cy-qy-menu-close{ 
@@ -2939,8 +2968,8 @@ dd.pjc-statistic-star >form{
 
 .zsld-legend-list{
     right:auto;
-    left:5.5rem;
-	font-size: .25rem;
+    left:6rem;
+	font-size: .4rem;
 	line-height: 1.5em;
     transition: .3s all ease;
 }
@@ -3402,9 +3431,11 @@ dd.pjc-statistic-star >form{
 }
 .sqzz-wrjgd-lr2 .sqrk-li > .item-l > img{ width: .6rem; }
 .sqzz-wrjjm-lr1-ul>li{ 
-	width: 25%;
+	width: 1.7rem;
 	padding: .26rem 0; 
+    flex-grow:0;
 }
+.sqzz-wrjjm-lr1-ul > li:last-child { flex-grow:2;}
 .tablebox{ position: relative; }
 .tablebox .linear-gradient{
 	position: absolute;
@@ -3433,6 +3464,10 @@ dd.pjc-statistic-star >form{
 }
 .sqzz-wrj-lr3-ul>li>.item-l>img{
 	width: 1.3rem;
+}
+.society-ls-street2 .sqrk-ul {
+    width:100%;
+    margin-top:.2rem;
 }
 
 /* 楼栋信息*/
