--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
@@ -4,7 +4,7 @@
         <div id="zsld-title">招商简报</div>
     </h3>
     <div class="divcont zsld-cont">
-        <div class="chartdiv zsld-chartdiv" style="height: 4rem;">
+        <div class="chartdiv zsld-chartdiv" style="height: 5rem;">
             <div class="zsld-chart" id="zsld-chart"></div>
             
             <ul class="legend-list zsld-legend-list" id="zsld-legend">
@@ -21,7 +21,7 @@
 
 
         </div>
-        <div class="zsld-div" id="zsld" style="margin-top:-.3rem;">
+        <div class="zsld-div" id="zsld">
             <!--<div class="zsld-result">产业聚集地</div>
             <ul class="zsld-ul">
                 <li class="zsld-li clearfix"><span>上海市</span><div class="zsld-bar"><div data-text="26589"></div></div></li>
