--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
@@ -1,29 +1,33 @@
 ﻿<!-- 无人机 -->
 <div id="left02_02" class="divbox divbox-lr society-ls-street2" style="top: 6.2rem;">
     <h3><div>无人机（当月）</div></h3>
-    <div class="divcont sqzz-wrj-lr1 flex">
-        <ul class="sqrk-ul">
-            <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-11.png"/></div>
-                <div class="item-r"><div class="item-r-name">巡飞数量（架）</div><div class="item-r-data testAerial" id="jm_drone1">16</div></div>
+    <div class="divcont sqzz-wrj-lr1">
+        <div class="sqzz-wrj-div">
+            <div class="sqzz-wrj-div-video">
+                <div class="wrj-li  prism-player" id="StreetWrjVideo"></div>
+            </div>
+            <div class="wrj-left">
+                <ul class="wrj-ul">
+                    <li class="wrj-li  prism-player" id="StreetWrjPic"></li>
+                </ul>
+            </div>
+        </div>
+        <ul class="sqrk-ul" id="sqzz-wrj-ul">
+            <li class="sqrk-li" id="jm_drone1">
+                <img src="Content/images/sqzz-lr-11.png"/>
+                <div class="item-r-name">巡飞数量（架）</div>
+                <div class="item-r-data testAerial">16</div>
             </li>
-            <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-12.png"/></div>
-                <div class="item-r"><div class="item-r-name">巡飞次数（次）</div><div class="item-r-data testAerial" id="jm_drone2">16</div></div>
+            <li class="sqrk-li" id="jm_drone2">
+                <img src="Content/images/sqzz-lr-12.png" />
+                <div class="item-r-name">巡飞次数（次）</div>
+                <div class="item-r-data testAerial">16</div>
             </li>
-            <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqzz-lr-13.png"/></div>
-                <div class="item-r"><div class="item-r-name">巡飞时间（小时）</div><div class="item-r-data testAerial" id="jm_drone3">256</div></div>
+            <li class="sqrk-li" id="jm_drone3">
+                <img src="Content/images/sqzz-lr-13.png" />
+                <div class="item-r-name">巡飞时间（分钟）</div>
+                <div class="item-r-data testAerial">16</div>
             </li>
         </ul>
-        <div class="wrj-left">
-            <ul class="wrj-ul">
-                <li class="wrj-li  prism-player"  id="StreetWrjVideo"></li>
-                <!--<li class="wrj-li"></li>
-                <li class="wrj-li"></li>-->
-            </ul>
-            <!--<button type="button" class="arrowbtn btnleft"></button>
-            <button type="button" class="arrowbtn btnright"></button>-->
-        </div>
     </div>
 </div>
