街面信息更新

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
@@ -4,7 +4,9 @@
     <div class="divcont sqzz-wrj-lr1">
         <div class="sqzz-wrj-div">
             <div class="sqzz-wrj-div-video">
-                <div class="wrj-li  prism-player" id="StreetWrjVideo"></div>
+                <ul class="wrj-ul">
+                    <li class="wrj-li  prism-player" id="StreetWrjVideo"></li>
+                </ul>
             </div>
             <div class="wrj-left">
                 <ul class="wrj-ul">
@@ -12,7 +14,12 @@
                 </ul>
             </div>
         </div>
-        <ul class="sqrk-ul" id="sqzz-wrj-ul">
+        <ul class="sqzz-hax-lr1-ul flex" id="sqzz-wrj-ul">
+            <li class="sqzz-hax-lr1-li" id="jm_drone1"><button><div>巡飞数量（架）</div><span class="testAerial">1</span></button></li>
+            <li class="sqzz-hax-lr1-li" id="jm_drone1"><button><div>巡飞次数（次）</div><span class="testAerial">10</span></button></li>
+            <li class="sqzz-hax-lr1-li" id="jm_drone1"><button><div>巡飞时间（分钟）</div><span class="testAerial">200</span></button></li>
+        </ul>
+        <!--<ul class="sqrk-ul" id="sqzz-wrj-ul">
             <li class="sqrk-li" id="jm_drone1">
                 <img src="Content/images/sqzz-lr-11.png"/>
                 <div class="item-r-name">巡飞数量（架）</div>
@@ -28,6 +35,6 @@
                 <div class="item-r-name">巡飞时间（分钟）</div>
                 <div class="item-r-data testAerial">16</div>
             </li>
-        </ul>
+        </ul>-->
     </div>
 </div>
