--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -598,7 +598,12 @@ button.arrowbtn.btnright{
     box-sizing:border-box;
     overflow:hidden;
 }
-
+.sqzz-wrj-div .sqzz-wrj-div-video>.wrj-ul {
+    position:relative;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+}
 
 /*左侧第二列---社区统计*/
 .divcont-sqtj{
@@ -688,18 +693,6 @@ button.arrowbtn.btnright{
 .sqrk-li>.item-r>.item-r-name{ font-size: .22rem;}
 .sqrk-li>.item-r>.item-r-data{ font-size: .46rem; line-height: 1em;}
 
-#sqzz-wrj-ul .sqrk-li {
-    height:.8rem;
-    display:flex;
-    font-size:.3rem;
-    align-items:center;
-    justify-content:space-between;
-}
-#sqzz-wrj-ul .sqrk-li>img{ width:.8rem; margin-right:.2rem;}
-#sqzz-wrj-ul .sqrk-li > .item-r-data {
-    flex-grow:2;
-    text-align:right;
-}
 
 /*左侧第二列---无人机*/
 .wrj-l2-li{
