海岸线无人机更新

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
@@ -10,9 +10,9 @@
     <div class="divcont sqzz-hax-lr2">
         <div class="sqzz-hax-lr2-div flex">
             <ul class="sqzz-hax-lr2-ul" id="recent-monthflight">
-                <li><span>近一个月的飞行长度</span><em class="testAerial">12,860</em></li>
-                <li><span>近一个月的飞行次数</span><em class="testAerial">12,860</em></li>
-                <li><span>近一个月的飞行时间</span><em class="testAerial">30h</em></li>
+                <li><span>近一个月的飞行长度（千米）</span><em class="testAerial">12,860</em></li>
+                <li><span>近一个月的飞行次数(次)</span><em class="testAerial">12,860</em></li>
+                <li><span>近一个月的飞行时间（小时）</span><em class="testAerial">30h</em></li>
             </ul>
             <!--<div class="sqzz-hax-lr2-pic">
               <div class="prism-player" id="monthlyRecentFlyVideo" style="height:100%;"></div>
