--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard1.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="sqzz-hax-lr1-ul flex" id="recent-flight-mess">
             <li class="sqzz-hax-lr1-li"><button><div>游客发现数</div><span class="testAerial">6</span></button></li>
-            <li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>
+            <!--<li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>-->
             <li class="sqzz-hax-lr1-li"><button><div>垃圾发现数</div><span class="testAerial">10</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>帐篷发现数</div><span class="testAerial">10</span></button></li>
         </ul>
