中间大数字更新

--- a/Lingang.City.Brain/View/SocietyNew/Center_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01.html
@@ -9,11 +9,11 @@
                 <dt>近30天案件数</dt>
                 <dd class="testAerial"><span id="dsz-dyajs">0</span></dd>
                 <dt>智能派单率</dt>
-                <dd class="testAerial"><span id="dsz-znpds">0</span><span>&#37;</span></dd>
+                <dd class="testAerial"><span id="dsz-znpds">0</span></dd>
                 <dt>主动发现率</dt>
-                <dd class="testAerial"><span id="dsz-zdfxl">0</span><span>&#37;</span></dd>
+                <dd class="testAerial"><span id="dsz-zdfxl">0</span></dd>
                 <dt>闭环率</dt>
-                <dd class="testAerial"><span id="dsz-bhl">0</span><span>&#37;</span></dd>
+                <dd class="testAerial"><span id="dsz-bhl">0</span></dd>
             </dl>
         </div>
     </div>
