- refine park detail html.

--- a/Lingang.City.Brain/View/Industry/Garden/ParkDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/ParkDetail.html
@@ -1,11 +1,11 @@
-﻿<div class="poi-box ParkDetail" style="max-width: 6em;">
+﻿<div class="poi-box ParkDetail" style="width: 4.5em;">
     <div class="poi-title">上海海洋科技创业园区</div>
     <div class="poi-cont">
         <ul class="poi-ul">
             <li class="poi-li"><span>占地面积：</span><em>114亩</em></li>
             <li class="poi-li"><span>建筑面积：</span><em>6.5万平方米</em></li>
             <li class="poi-li"><span>交付日期：</span><em>2016年3月</em></li>
-            <li class="poi-li"><span>主导产业：</span><em>深海研究、海洋工程设备、海洋新能源、海洋新材料</em></li>
+            <li class="poi-li" style="overflow: hidden "><span style="width: 5em; float: left;">主导产业：</span><em style="width: calc(100% - 5em); float: left;">深海研究、海洋工程设备、海洋新能源、海洋新材料</em></li>
         </ul>
     </div>
 </div>
