- fix video bug.

--- a/Lingang.City.Brain/View/SocietyNew/Center_03.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_03.html
@@ -3,7 +3,7 @@
         <span id="bigechartHead">社区车辆</span>
         <button type="button" class="box-close" onclick="require('s_Home').closeBigChart(); require('s_Main').closevideo()"></button>
     </div>
-    <div class="zoomin-chart" id="Big-chart">
+    <div class="zoomin-chart prism-player" id="Big-chart">
         
     </div> 
 </div>
