智慧物业更新

--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
@@ -20,8 +20,8 @@
                 </ul>
             </div>
             <div class="cy-zhwy-div" id="zhwy-weekaveragerate">
-                <div>周平均完成率</div>
-                <!--<span class="testAerial">92%</span>-->
+               <!-- <div>周平均完成率</div>
+                <span class="testAerial">92%</span>-->
             </div>
         </div>
         <div class="chartdiv zhwy-chartdiv" style="height: 4rem; margin-top: .2rem;">
