人员车辆结构化图片  更新1

--- a/Lingang.City.Brain/View/SocietyNew/Center_05.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_05.html
@@ -4,15 +4,15 @@
     <button type="button" class="box-close"  onclick="require('s_Echart').closeCenterCarIdentify();"></button>
   </div>
   <div class="sxtcar-identify sxtcar-identify-largebox">
-    <div class="sxtcar-identify-pic">
+    <div class="sxtcar-identify-pic iot-percarpic" id="iot-percarpic">
       <img src="Content/images/pic-car.png"/>
     </div>
     <div class="sxtcar-identify-text">
-      <div>
+      <div class="iot-percarmess">
         <em>车牌号：</em>
         <span class="testAerial">沪A00544</span>
       </div>
-      <div>
+      <div class="iot-percartime">
         <em>识别时间：</em>
         <span class="testAerial">02/03 11:20:10</span>
       </div>
