--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -12,15 +12,15 @@
                 </div>
             </li>
           <li class="sxtcar-identify flex">
-            <div class="sxtcar-identify-pic">
-              <img src="Content/images/pic-car.png"></img>
+            <div class="sxtcar-identify-pic iot-percarpic" >
+              <img src="Content/images/pic-car.png" />
             </div>
             <div class="sxtcar-identify-text">
-              <div>
+              <div class="iot-percarmess">
                 <em>车牌号：</em>
                 <span class="testAerial">沪A00544</span>
               </div>
-              <div>
+              <div class="iot-percartime">
                 <em>识别时间：</em>
                 <span class="testAerial">02/03 11:20:10</span>
               </div>
