园区产业--产业信息大数字更新 景区事件统计--类型更新

--- a/Lingang.City.Brain/View/Industry/Estate/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Center_01.html
@@ -9,12 +9,14 @@
             <dl>
                 <dt>企业总数</dt>
                 <dd class="testAerial"><span id="e_qyzs">66,159</span></dd>
+                <dt>规上企业数</dt>
+                <dd class="testAerial"><span id="e_gsqys">2,309</span></dd>
                 <dt>战略新兴企业数</dt>
-                <dd class="testAerial"><span id="e_zlxxqys">2,309</span></dd>
-                <dt>投融资企业数</dt>
-                <dd class="testAerial"><span id="e_ssgs">117</span></dd>
-                <dt>异动企业数</dt>
-                <dd class="testAerial"><span id="e_ydqys">22,678</span></dd>
+                <dd class="testAerial"><span id="e_zlxxqys">117</span></dd>
+                <dt>独角兽企业数</dt>
+                <dd class="testAerial"><span id="e_djsqys">22,678</span></dd>
+                <dt>上市企业数</dt>
+                <dd class="testAerial"><span id="e_ssqys">22,678</span></dd>
             </dl>
         </div> 
     </div>
