--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
@@ -1,13 +1,26 @@
-﻿<!-- 企业变化趋势 -->
+﻿<!-- 产业简报图表 -->
 <div   id="right02_01" class="divbox divbox-rr clearfix  industry-estate-rs1" style="z-index:999;display:block;">
     <h3>
-        <div>企业变化趋势</div>
+        <div>产业简报图表</div>
     </h3>
-    <div class="divcont">
-        <div class="chartdiv qybhqs-chartdiv">
+    <div class="divcont cyjb-cont">
+        <!--<div class="chartdiv qybhqs-chartdiv">
             <div class="qybhqs-chart" id="qybhqs-chart"></div>
             <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_01')"></button>
+        </div>-->
+        <div class="charttabbox flex" id="cyjb-charttabbox">
+            <a class="charttab active">产业类型划分</a>
+            <a class="charttab">2+3+4企业分类划分</a>
+            <a class="charttab">园区划分</a>
         </div>
+        <div class="cyjb-div" style="position: relative; height: 4rem;">
+            <div class="chartdiv cyjb-chartdiv">
+                <div class="cyjb-chart" id="cyjb-chart"></div>
+                <button class="chartzoomin"></button>
+                <ul class="legend-list scrolldiv"></ul>
+            </div>
+        </div>
+
     </div>
    
 </div>
