- refine ui, hide useless button.

--- a/Lingang.City.Brain/View/Industry/Estate/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Bottom_Menu.html
@@ -7,8 +7,8 @@
 
     <!--园区信息底部菜单合并到产业信息-->
     <li class="">园区楼宇</li>
-    <li class="">园区停车</li>
+    <!-- <li class="">园区停车</li> -->
     <!--<li class="">无人驾驶接驳车</li>-->
-    <li class="">园区事件</li>
+    <!-- <li class="">园区事件</li> -->
     <!--<li class="">产业信息</li>-->
 </ul>
