--- a/Lingang.City.Brain/View/Industry/Garden/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Center_01.html
@@ -4,14 +4,14 @@
     <div class="statistic-slidediv">
         <div class="pjc-statistic" style="z-index:999;display:block;">
             <dl>
-                <dt>园区企业数</dt>
+                <dt>海立方企业数</dt>
                 <dd class="testAerial"><span id="g_zcqys">2,764</span></dd>
-                <dt>固定资产投资（万元）</dt>
+                <dt>战略新兴企业数</dt>
                 <dd class="testAerial"><span id="g_gdzctz">5,702.93</span></dd>
-                <dt>产值（万元）</dt>
+                <!-- <dt>产值（万元）</dt>
                 <dd class="testAerial"><span id="g_cz">520,687.98</span></dd>
                 <dt>税收（万元）</dt>
-                <dd class="testAerial"><span id="g_ss">18,554.5</span></dd>
+                <dd class="testAerial"><span id="g_ss">18,554.5</span></dd> -->
             </dl>
         </div>
     </div>
