--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -1,6 +1,11 @@
 ﻿<!-- 智慧能耗 -->
-<div id="right01_02" class="divbox divbox-rl clearfix cy-zhwy-rl2 industry-garden-rf2" style="top: 10rem;z-index:999;display:block;">
-    <h3><div id="zhnh-title">智慧能耗</div></h3>
+<div id="right01_02" class="divbox divbox-rl clearfix cy-zhwy-rl2 industry-garden-rf2 divbox-sqzz-hax-lr1" style="top: 10rem;z-index:999;display:block;">
+    <h3 class="hastabbox">
+        <div id="zhnh-title">智慧能耗</div>
+        <div class="charttabbox flex">
+            <a class="charttab"><span>近一年</span></a>
+        </div>
+    </h3>
     <div class="divcont">
 
         <div class="cy-zhnh flex">
