--- a/Lingang.City.Brain/View/TourNew/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/TourNew/Bottom_Menu.html
@@ -4,13 +4,13 @@
     <button type="button" class="night-scene active" onclick="require(['common'], function (data) { data.ChangeLight(0); })">夜景</button>
 </div>-->
 <ul class="flex">
-    <li class="active">人流热力图</li>
+    <li class="">人流热力图</li>
     <!--<li class="">实时路况</li>-->
     <li class="">摄像头</li>
     <li class="">无人机</li>
     <li class="">停车场</li>
     <li class="">公交</li>
     <li class="">事件</li>
-    <li class="">人流预测</li>
+    <li class="active">人流预测</li>
     <li class="">交通仿真</li>
 </ul>
