--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
@@ -1,6 +1,11 @@
 ﻿<!-- 智慧物业 -->
-<div id="right01_01"  class="divbox divbox-rl clearfix industry-garden-rf1" style="z-index:999;display:block;">
-    <h3><div id="zhwyRepair-title">智慧物业</div></h3>
+<div id="right01_01"  class="divbox divbox-rl clearfix industry-garden-rf1 divbox-sqzz-hax-lr1" style="z-index:999;display:block;">
+    <h3 class="hastabbox">
+        <div id="zhwyRepair-title">智慧物业</div>
+        <div class="charttabbox flex">
+            <a class="charttab"><span>近一周</span></a>
+        </div>
+    </h3>
     <div class="divcont">
         <div class="cy-zhwy flex">
             <div class="cy-zhwy-div flex">
