--- a/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_Menu.html
@@ -5,7 +5,7 @@
     <li class="">村居工作站</li>-->
     <li class="">海岸线</li>
     <li class="">工地</li>
-    <li class="">街面</li>
+    <!-- <li class="">街面</li> -->
     <li class="">网格</li>
     <li class="active">事件</li>
     <!--<li class="" dataText="剖面">管网</li>-->
