--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_02.html
@@ -1,68 +1,46 @@
 ﻿<!-- 风控雷达 -->
 <div id="right02_02"  class="divbox divbox-rr clearfix  industry-estate-rs2" style="top:9rem;z-index:990;display:block;">
     <h3>
-        <div>风控雷达</div>
+        <div>产业简报企业列表</div>
     </h3>
-    <div class="divcont fkld-cont">
-        <div class="chartdiv fkld-chartdiv" style="height: 4rem;">
-            <div class="fkld-chart" id="fkld-chart"></div>
-            
-
-            <ul class="legend-list fkld-legend-list ">
-                <li class="">经营风险</li>
-                <li class="">税收异常</li>
-                <li class="">司法监管</li>
-                <li class="">舆情风险</li>
-            </ul>
-
-
+    <div class="divcont cyjbList-cont">
+        <div class="cyjbList-tabbox flex">
+            <button class="cyjbList-tab active" id="cyjb-business">
+                <div>569</div>
+                <span>新增企业数</span>
+            </button>
+            <button class="cyjbList-tab" id="cyjb-died">
+                <div>130</div>
+                <span>迁出/消亡企业数</span>
+            </button>
+            <button class="cyjbList-tab" id="cyjb-regulatory">
+                <div>567</div>
+                <span>新增司法监管数</span>
+            </button>
+            <button class="cyjbList-tab" id="cyjb-judged">
+                <div>38</div>
+                <span>新增行政处罚数</span>
+            </button>
+            <button class="cyjbList-tab" id="cyjb-emerging">
+                <div>2</div>
+                <span>新增战略新兴企业数</span>
+            </button>
         </div>
-        
-        <div class="fkld-div" id="fkld">
-            <div class="fkld-result">税收异常</div>
-            <div class="fkld-button flex">
-                <button class="">企业数<span>20,452</span></button>
-                <button class="">信息数<span>41,158</span></button>
+        <div class="cyjbList-div scrolldiv" id="cyjbList-div" style="height: 9.3rem;">
+            <!--<div class="cyjbList-item">
+                <div class="cyjbList-name">上海国奥源华安生物科技有限公司</div>
+                <div class="cyjbList-type">科学研究、技术服务和地质勘查业</div>
             </div>
-            <ul class="fkld-list">
-                <li class="fkld-li">
-                    <div class="fkld-title">企业所得税<span>5,433|10,938</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">增值税异常<span>10,239|20,608</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">营业税异常<span>1,418|2,862</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">消费税<span>7|14</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">房产税<span>300|600</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">车船使用税<span>6,234|5,123</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">印花税<span>3,055|6,136</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">城建税<span>8,091|5,785</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-                <li class="fkld-li">
-                    <div class="fkld-title">营改税<span>7,791|5,091</span></div>
-                    <div class="fkld-bardiv"><span class="fkld-bar"></span></div>
-                </li>
-            </ul>
+            <div class="cyjbList-item">
+                <div class="cyjbList-name">上海国奥源华安生物科技有限公司</div>
+                <div class="cyjbList-type">科学研究、技术服务和地质勘查业</div>
+            </div>
+            <div class="cyjbList-item">
+                <div class="cyjbList-name">上海国奥源华安生物科技有限公司</div>
+                <div class="cyjbList-type">科学研究、技术服务和地质勘查业科学研究、技术服务和地质勘查业科学研究、技术服务和地质勘查业</div>
+            </div>-->
         </div>
+
     </div>
 </div>
 
