产业简报更新

--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
@@ -1,13 +1,12 @@
 ﻿<!-- 产业简报图表 -->
-<div   id="right02_01" class="divbox divbox-rr clearfix  industry-estate-rs1" style="z-index:999;display:block;">
-    <h3>
-        <div>产业简报图表</div>
+<div   id="right02_01" class="divbox divbox-rr clearfix  industry-estate-rs1 cyjb-box" style="z-index:999;display:block;">
+    <h3 class="hastabbox">
+        <div>产业简报</div>
+        <div class="charttabbox flex">
+            <a class="charttab" id="cyjb-updatetime">更新时间：<em></em></a>
+        </div>
     </h3>
-    <div class="divcont cyjb-cont">
-        <!--<div class="chartdiv qybhqs-chartdiv">
-            <div class="qybhqs-chart" id="qybhqs-chart"></div>
-            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_01')"></button>
-        </div>-->
+    <div class="divcont cyjb-cont" style="padding-top:0;">
         <div class="charttabbox flex" id="cyjb-charttabbox">
             <a class="charttab active">产业类型划分</a>
             <a class="charttab">2+3+4企业分类划分</a>
