--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_02.html
@@ -1,9 +1,9 @@
 ﻿<!-- 风控雷达 -->
 <div id="right02_02"  class="divbox divbox-rr clearfix  industry-estate-rs2" style="top:9rem;z-index:990;display:block;">
-    <h3>
+    <!--<h3>
         <div>产业简报企业列表</div>
-    </h3>
-    <div class="divcont cyjbList-cont">
+    </h3>-->
+    <div class="divcont cyjbList-cont" style="padding-top:0;">
         <div class="cyjbList-tabbox flex">
             <button class="cyjbList-tab active" id="cyjb-business">
                 <div>569</div>
@@ -26,7 +26,7 @@
                 <span>新增战略新兴企业数</span>
             </button>
         </div>
-        <div class="cyjbList-div scrolldiv" id="cyjbList-div" style="height: 9.3rem;">
+        <div class="cyjbList-div scrolldiv" id="cyjbList-div" style="height: 10rem;">
             <!--<div class="cyjbList-item">
                 <div class="cyjbList-name">上海国奥源华安生物科技有限公司</div>
                 <div class="cyjbList-type">科学研究、技术服务和地质勘查业</div>
