--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -4046,13 +4046,26 @@ dd.pjc-statistic-star >form{
 
 
 
-/*产业简报图表 */
+/*产业简报 */
+.cyjb-box .hastabbox .charttab:after{ display: none; }
+.cyjb-box .hastabbox .charttabbox{
+	display: block;
+	position: relative;
+	padding-left:1rem;
+
+}
+.cyjb-box .hastabbox .charttab{
+	position: absolute;
+	top: 0;
+	white-space:nowrap;
+}
+.cyjb-box .hastabbox .charttab>em{ color: #01fdf5;}
 .cyjb-cont .charttabbox{
 	justify-content: space-around;
 	align-items: center;
 	padding: 0 .5rem;
 	height: .5rem;
-	margin-bottom: .2rem;
+	margin: .2rem 0;
     font-size:.3rem;
 	box-sizing: border-box;
 }
@@ -4140,7 +4153,7 @@ dd.pjc-statistic-star >form{
 .cyjbList-item{
 	padding: .06rem .2rem;
 	margin-bottom: .1rem;
-	background: rgba(0, 65, 121, 0.2);
+	background: rgba(0, 65, 121, 0.1);
 	border-radius: .03rem;
 	cursor: pointer;
 }
@@ -4148,7 +4161,7 @@ dd.pjc-statistic-star >form{
 .cyjbList-name{
 	font-size: .26rem;
 	line-height: 1.2em;
-	color: #00c9ef;
+    color: #00c9ef;
 }
 .cyjbList-type{
 	display: block;
@@ -4163,7 +4176,11 @@ dd.pjc-statistic-star >form{
 }
 .cyjbList-item:hover,
 .cyjbList-item.active{
-	background: rgba(2, 110, 175, 0.71);
+	background: rgba(0,126,179,.3);
+}
+.cyjbList-item:hover>.cyjbList-name,
+.cyjbList-item.active>.cyjbList-name{
+	color: #01fdf5;
 }
 .cyjbList-item:hover>.cyjbList-type,
 .cyjbList-item.active>.cyjbList-type{
