- refine some value.

--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -3,7 +3,7 @@
     <h3 class="hastabbox">
         <div id="zhnh-title">智慧能耗</div>
         <div class="charttabbox flex">
-            <a class="charttab"><span>近一年</span></a>
+            <!--<a class="charttab"><span>近一年</span></a>-->
         </div>
     </h3>
     <div class="divcont">
