--- a/Lingang.City.Brain/View/Industry/Garden/ParkDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/ParkDetail.html
@@ -2,8 +2,8 @@
     <div class="poi-title">上海海洋科技创业园区</div>
     <div class="poi-cont">
         <ul class="poi-ul">
-            <li class="poi-li"><span>占地面积：</span><em>76305.1平方米</em></li>
-            <li class="poi-li"><span>建筑面积：</span><em>77243.72平方米</em></li>
+            <li class="poi-li"><span>占地面积：</span><em>76,305.1平方米</em></li>
+            <li class="poi-li"><span>建筑面积：</span><em>138,700.52‬平方米</em></li>
             <li class="poi-li"><span>交付日期：</span><em>2016年3月</em></li>
             <li class="poi-li" style="overflow: hidden "><span style="width: 5em; float: left;">主导产业：</span><em style="width: calc(100% - 5em); float: left;">深海研究、海洋工程设备、海洋新能源、海洋新材料</em></li>
         </ul>
