--- a/Lingang.City.Brain/View/SocietyNew/Center_05.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_05.html
@@ -4,8 +4,8 @@
     <button type="button" class="box-close"  onclick="require('s_Echart').closeCenterCarIdentify();"></button>
   </div>
   <div class="sxtcar-identify sxtcar-identify-largebox">
-    <div class="sxtcar-identify-pic iot-percarpic" id="iot-percarpic">
-      <img src="Content/images/pic-car.png"/>
+    <div class="sxtcar-identify-pic">
+      <div  class="iot-percarpic"  id="iot-percarpic"></div>
     </div>
     <div class="sxtcar-identify-text">
       <div class="iot-percarmess">
