--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -12,8 +12,8 @@
                 </div>
             </li>
           <li class="sxtcar-identify flex">
-            <div class="sxtcar-identify-pic iot-percarpic" >
-              <img src="Content/images/pic-car.png" />
+            <div class="sxtcar-identify-pic" >
+              <div class="iot-percarpic"></div>
             </div>
             <div class="sxtcar-identify-text">
               <div class="iot-percarmess">
