--- a/Lingang.City.Brain/View/TourNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_04.html
@@ -3,9 +3,9 @@
     <h3 class="hastabbox">
         <div>舆情分析</div>
         <div class="charttabbox flex">
-            <a class="charttab">正面<span style="color: #22990a;">(38.71%)</span></a>
-            <a class="charttab">中性<span style="color: #2961f1;">(51.61%)</span></a>
-            <a class="charttab">负面<span style="color: #fb5301;">(9.68%)</span></a>
+            <a class="charttab">正面<span style="color: #22990a;" id="yqfx-positive">(38.71%)</span></a>
+            <a class="charttab">中性<span style="color: #2961f1;" id="yqfx-neutral">(51.61%)</span></a>
+            <a class="charttab">负面<span style="color: #fb5301;" id="yqfx-negative">(9.68%)</span></a>
         </div>
     </h3>
     <div class="divcont flex">
