poi隐藏问题，隐藏了楼宇详情窗口几个字

--- a/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
+++ b/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
@@ -1,7 +1,7 @@
 ﻿<!-- 中间 一列 -->
 <!-- 楼栋信息 -->
 <div class="loudong" id="center01_01">
-    <div class="loudong-top"><span class="testAerial" id="buildingName_detail">15</span>号<span class="testAerial">A</span>栋</div>
+    <div class="loudong-top"><span class="testAerial" id="buildingName_detail">15</span></div>
     <div class="loudong-div">
         <button class="box-close" onclick="require('g_Home').closeBuildingDetail();"></button>
         <ul class="loudong-ul">      
