产业简报中台控制

--- a/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_Second_01.html
@@ -15,7 +15,7 @@
         <div class="cyjb-div" style="position: relative; height: 4rem;">
             <div class="chartdiv cyjb-chartdiv">
                 <div class="cyjb-chart" id="cyjb-chart"></div>
-                <button class="chartzoomin"></button>
+                <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Right_Second_01')"></button>
                 <ul class="legend-list scrolldiv"></ul>
             </div>
         </div>
