产业简报更新

--- a/Lingang.City.Brain/View/Industry/Estate/center_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/center_03.html
@@ -4,6 +4,6 @@
         <button type="button" class="box-close" onclick="require('e_Home').closeBigChart();"></button>
     </div>
     <div class="zoomin-chart" id="Ebig-chart">
-
+        <ul class="legend-list scrolldiv"></ul>
     </div>
 </div>
