--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_01.html
@@ -6,7 +6,7 @@
             <a class="charttab"><span>近一周</span></a>
         </div>
     </h3>
-    <div class="divcont">
+    <div class="divcont" style="padding-top:0;">
         <div class="cy-zhwy flex">
             <div class="cy-zhwy-div flex">
                 <button class="cy-zhwy-a">报修</button>
