--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3896,7 +3896,7 @@ dd.pjc-statistic-star >form{
 .sxtcar-identify-pic>div{
     width: 100%;
 	height: 100%;
-	background: url(../Content/images/pic-car.png);
+	/*background: url(../Content/images/pic-car.png);*/
 	background-size: 100% 100%;
 }
 #iot-percarpic {
@@ -4191,13 +4191,13 @@ dd.pjc-statistic-star >form{
 	color: #fff;
 }
 #sjqytotal > div > .testAerial ,
-#sjlxtotal > div > .testAerial {
- font-size:.4rem;}
-
+#sjlxtotal > div > .testAerial {font-size:.4rem;}
+.dkl-jtxx .cgq-li .item-r {margin-top:.2rem;}
 
 
 @media screen and (max-width: 11520px){
 	html{ font-size:140px;}
+
 }
 @media screen and (max-width: 7680px) {
     html { font-size: 90px; }
@@ -4205,10 +4205,6 @@ dd.pjc-statistic-star >form{
 @media screen and (max-width: 4500px) {
     html { font-size: 70px; }
     .cgq-li > .has-num.item-l::after { font-size:.35rem;}
-
-
-
-
 
     /*城区综治*/
     .society-lf1 { top:13rem !important;}
