--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -18,11 +18,11 @@
             <div class="sxtcar-identify-text">
               <div class="iot-percarmess">
                 <em>车牌号：</em>
-                <span class="testAerial">沪A00544</span>
+                <span class="testAerial"></span>
               </div>
               <div class="iot-percartime">
                 <em>识别时间：</em>
-                <span class="testAerial">02/03 11:20:10</span>
+                <span class="testAerial"></span>
               </div>
             </div>
             <button class="sxtcar-identify-zoomin"  onclick="require('s_Echart').loadCenterCarIdentify();"></button>
