- mhl:右边识别图片更新。

--- a/Lingang.City.Brain/View/SocietyNew/Center_05.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_05.html
@@ -9,12 +9,12 @@
     </div>
     <div class="sxtcar-identify-text">
       <div class="iot-percarmess">
-        <em>车牌号：</em>
-        <span class="testAerial">沪A00544</span>
+        <em></em>
+        <span class="testAerial"></span>
       </div>
-      <div class="iot-percartime">
-        <em>识别时间：</em>
-        <span class="testAerial">02/03 11:20:10</span>
+      <div class="iot-percartime" id="iot-percartime">
+        <em></em>
+        <span class="testAerial"></span>
       </div>
     </div>
   </div>
