- delete "处置状态" in parking module.

--- a/Lingang.City.Brain/View/TourNew/Center_04.html
+++ b/Lingang.City.Brain/View/TourNew/Center_04.html
@@ -13,9 +13,9 @@
         <li class="yqsjlb-item clearfix">
           <div class="item-l"></div>
           <div class="item-r">
-            <div>拍照时间：2019-03-20 10:49:32</div>
+            <!-- <div>拍照时间：2019-03-20 10:49:32</div>
             <div>待处置<span>李立群</span></div>
-            <div>事件详情：花柏路环湖西三路路口北侧疑似渣土车,车牌号:沪DB6977。</div>
+            <div>事件详情：花柏路环湖西三路路口北侧疑似渣土车,车牌号:沪DB6977。</div> -->
           </div>
         </li>
     </ul>
