--- a/Lingang.City.Brain/View/TourNew/Right_Second_03.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_03.html
@@ -10,7 +10,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:49:32</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：花柏路环湖西三路路口北侧疑似渣土车,车牌号:沪DB6977。</div>
                 </div>
             </li>
@@ -18,7 +18,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:49:18</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：花柏路环湖西三路路口北侧疑似渣土车,车牌号:沪ED7837。</div>
                 </div>
             </li>
@@ -26,7 +26,7 @@
                 <div class="item-l" id="tq3"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:47:30</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路以东250米疑似渣土车,车牌号:沪DD6998。</div>
                 </div>
             </li>
@@ -34,7 +34,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:46:49</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路以东250米疑似渣土车,车牌号:沪FS9160。</div>
                 </div>
             </li>
@@ -42,7 +42,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:46:08</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路路口以北190米疑似渣土车,车牌号:沪DT4798。</div>
                 </div>
             </li>
@@ -50,7 +50,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:46:01</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路以东250米疑似渣土车,车牌号:沪DF0595。</div>
                 </div>
             </li>
@@ -58,7 +58,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：019-03-20 10:40:47</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：夏栎路雪绒花路周边疑似黑车,车牌号:苏CX9D10。</div>
                 </div>
             </li>
@@ -66,7 +66,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:40:47</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道两港大道以东200米周边疑似黑车,车牌号:沪C9R6C5。</div>
                 </div>
             </li>
@@ -74,7 +74,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:40:47</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：橄榄路/沪城环路 西向东周边疑似黑车,车牌号:沪C533GK。</div>
                 </div>
             </li>
@@ -82,7 +82,7 @@
                 <div class="item-l"></div>
                 <div class="item-r">
                     <div>拍照时间：2019-03-20 10:40:47</div>
-                    <div>处理状态：待处置<span>处置人：李立群</span></div>
+                    <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：沪城环路花柏路南侧200米周边疑似黑车,车牌号:沪C990KH。</div>
                 </div>
             </li>
