--- a/Lingang.City.Brain/View/Industry/Estate/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_First_01.html
@@ -1,10 +1,22 @@
 ﻿<!-- 产业竞争力 -->
-<div id="left01_01" class="divbox divbox-ll clearfix  industry-estate-lf1" style="z-index:999;display:block;">
+<!-- <div id="left01_01" class="divbox divbox-ll clearfix  industry-estate-lf1" style="z-index:999;display:block;">
     <h3><div>产业竞争力</div></h3>
     <div class="divcont">
         <div class="chartdiv cyjzl-chartdiv" style="height: 6rem;">
             <div class="cyjzl-chart" id="cyjzl-chart"></div>
         </div>
         <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_First_01')" style="top:.8rem;"></button>
+    </div>
+</div> -->
+<!-- 企业变化趋势 -->
+<div id="left01_01" class="divbox divbox-lr clearfix  industry-estate-ls1" style="z-index:999;display:block;">
+    <h3>
+        <div>企业变化趋势</div>
+    </h3>
+    <div class="divcont">
+        <div class="chartdiv qybhqs-chartdiv">
+            <div class="qybhqs-chart" id="qybhqs-chart"></div>
+            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_01')"></button>
+        </div>
     </div>
 </div>
